--- a/14.1.md
+++ b/14.1.md
@@ -54,6 +54,70 @@ kubectl delete secret domain-cert
 kubectl apply -f domain-cert.yml
 ```
 
+## Решение задачи 1: Работа с секретами через утилиту kubectl в установленном minikube
+
+Выполните приведённые ниже команды в консоли, получите вывод команд. Сохраните
+задачу 1 как справочный материал.
+
+### Как создать секрет?
+
+```
+openssl genrsa -out cert.key 4096
+openssl req -x509 -new -key cert.key -days 3650 -out cert.crt \
+-subj '/C=RU/ST=Moscow/L=Moscow/CN=server.local'
+kubectl create secret tls domain-cert --cert=certs/cert.crt --key=certs/cert.key
+```
+
+### Как просмотреть список секретов?
+
+```
+kubectl get secrets
+kubectl get secret
+```
+![1](/img/14.1.png)
+
+
+### Как просмотреть секрет?
+
+```
+kubectl get secret domain-cert
+kubectl describe secret domain-cert
+```
+![1](/img/14.1_1.png)
+### Как получить информацию в формате YAML и/или JSON?
+
+```
+kubectl get secret domain-cert -o yaml
+kubectl get secret domain-cert -o json
+```
+![1](/img/14.1_2.png)
+![1](/img/14.1_3.png)
+
+### Как выгрузить секрет и сохранить его в файл?
+
+```
+kubectl get secrets -o json > secrets.json
+kubectl get secret domain-cert -o yaml > domain-cert.yml
+```
+![1](/img/14.1_4.png)
+![1](/img/14.1_5.png)
+
+
+### Как удалить секрет?
+
+```
+kubectl delete secret domain-cert
+```
+
+
+### Как загрузить секрет из файла?
+
+```
+kubectl apply -f domain-cert.yml
+```
+![1](/img/14.1_6.png)
+
+
 ## Задача 2 (*): Работа с секретами внутри модуля
 
 Выберите любимый образ контейнера, подключите секреты и проверьте их доступность
