--- a/14.3.md
+++ b/14.3.md
@@ -11,6 +11,7 @@
 kubectl create configmap nginx-config --from-file=nginx.conf
 kubectl create configmap domain --from-literal=name=netology.ru
 ```
+![1](/img/dz_14_3_1.png)
 
 ### Как просмотреть список карт конфигураций?
 
@@ -18,6 +19,7 @@ kubectl create configmap domain --from-literal=name=netology.ru
 kubectl get configmaps
 kubectl get configmap
 ```
+![1](/img/dz_14_3_2.png)
 
 ### Как просмотреть карту конфигурации?
 
@@ -25,6 +27,7 @@ kubectl get configmap
 kubectl get configmap nginx-config
 kubectl describe configmap domain
 ```
+![1](/img/dz_14_3_3.png)
 
 ### Как получить информацию в формате YAML и/или JSON?
 
@@ -32,6 +35,7 @@ kubectl describe configmap domain
 kubectl get configmap nginx-config -o yaml
 kubectl get configmap domain -o json
 ```
+![1](/img/dz_14_3_4.png)
 
 ### Как выгрузить карту конфигурации и сохранить его в файл?
 
@@ -39,18 +43,22 @@ kubectl get configmap domain -o json
 kubectl get configmaps -o json > configmaps.json
 kubectl get configmap nginx-config -o yaml > nginx-config.yml
 ```
+![1](/img/dz_14_3_5_1.png)
+![1](/img/dz_14_3_5_2.png)
 
 ### Как удалить карту конфигурации?
 
 ```
 kubectl delete configmap nginx-config
 ```
+![1](/img/dz_14_3_6.png)
 
 ### Как загрузить карту конфигурации из файла?
 
 ```
 kubectl apply -f nginx-config.yml
 ```
+![1](/img/dz_14_3_7.png)
 
 ## Задача 2 (*): Работа с картами конфигураций внутри модуля
 
