--- a/14.2.md
+++ b/14.2.md
@@ -13,6 +13,7 @@ kubectl apply -f 14.2/vault-pod.yml
 ```
 kubectl get pod 14.2-netology-vault -o json | jq -c '.status.podIPs'
 ```
+![1](/img/dz_14_2_1.png)
 
 Примечание: jq - утилита для работы с JSON в командной строке
 
@@ -51,6 +52,8 @@ client.secrets.kv.v2.read_secret_version(
     path='hvac',
 )
 ```
+![1](/img/dz_14_2_2.png)
+
 
 ## Задача 2 (*): Работа с секретами внутри модуля
 
