--- a/14.4.md
+++ b/14.4.md
@@ -18,19 +18,22 @@ kubectl get serviceaccounts
 kubectl get serviceaccount
 ```
 
+![1](img/dz_14_4_1.png)
 ### Как получить информацию в формате YAML и/или JSON?
 
 ```
 kubectl get serviceaccount netology -o yaml
 kubectl get serviceaccount default -o json
 ```
-
+![2](img/dz_14_4_2.png)
 ### Как выгрузить сервис-акаунты и сохранить его в файл?
 
 ```
 kubectl get serviceaccounts -o json > serviceaccounts.json
 kubectl get serviceaccount netology -o yaml > netology.yml
 ```
+![3](img/dz_14_4_3.png)
+![3](img/dz_14_4_4.png)
 
 ### Как удалить сервис-акаунт?
 
@@ -43,6 +46,8 @@ kubectl delete serviceaccount netology
 ```
 kubectl apply -f netology.yml
 ```
+![3](img/dz_14_4_5.png)
+
 
 ## Задача 2 (*): Работа с сервис-акаунтами внутри модуля
 
